# 2024-P1-yuvrajsingh001

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
